@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/disease.c: fix bug #1713112: rabies infects audience of the arena.
+Nicolas Weeger 2007-05-09
+
 server/c_wiz.c: fix multipart object creation.
 Nicolas Weeger 2007-05-09
 
